crates/core/tests/ui/typed_query/fail/invalid_optional_limit_group.stderr
error: this SQL construct is outside the typed_sql v1 subset: typed_sql v1 requires `(...)?` to own an entire parenthesized WHERE/JOIN predicate or a single ORDER BY expression; LIMIT/OFFSET and other clause bodies must use direct `$value?` placeholders instead
          |
        1 | SELECT users.id FROM users LIMIT ($limit?)?
          |                                  ^^^^^^^^^^
       help: attach `?` only when the placeholder directly owns an entire WHERE/JOIN comparison or the full LIMIT/OFFSET expression; use `(...)?` for larger predicate groups
  --> tests/ui/typed_query/fail/invalid_optional_limit_group.rs:10:42
   |
10 |         SELECT users.id FROM users LIMIT ($limit?)?
   |                                          ^
